<resources>
    <string name="app_name">Leave APP V:1.0</string>
    <string name="us_platform">US Platform</string>
    <string name="dashboard">Dashboard</string>
    <string name="report">Report</string>
    <string name="leave_history">Leave History</string>
    <string name="available_leave">Available Leave</string>
    <string name="apply_for_leave">Apply For Leave</string>
    <string name="pdf">PDF</string>
    <string name="excel">Excel</string>
    <string name="generate_report">Generate Reports</string>
    <string name="incoming_leave">Incoming Leave </string>
    <string name="section_format">Page %1$d</string>
    <string name="select_leave_type">Select Leave Type</string>
    <string name="anual_leave">Anual Leave</string>
    <string name="clinical_leave">Clinical Leave</string>
    <string name="fill_in_the_details_below">Fill In the Details Below:</string>
    <string name="full_name">Full Name</string>
    <string name="return_date">Return Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reason">Reason</string>
    <string name="leave_address">Leave Address</string>
    <string name="leave_duration">Leave Durations</string>
    <string name="save">Save</string>
    <string name="maternity_leave">Maternity Leave</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="study_leave">Study Leave</string>
    <string name="sabbatical_leave">Sabbatical Leave</string>
    <string name="designation">Designation</string>
    <string name="present_salary">Present Salary(@Month)</string>
    <string name="date_of_asumption_of_duties_on_first_appointment">Date Of assumption of duties appointment</string>
    <string name="submit_application">Submit Application</string>
    <string name="action_settings">Settings</string>
    <string name="university_details">University Details</string>
    <string name="personal_details">Personel Details</string>
    <string name="enter_university_name">Enter University Name</string>
    <string name="submit_details">Submit Details</string>
    <string name="logo">University Logo</string>
    <string name="university_secretary_details">University Secretary Details</string>
    <string name="secretary_name">Secretary Name</string>
    <string name="faculties_details">Faculties Details</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="hod_details">Department Details</string>
    <string name="department_name">Department Name</string>
    <string name="action_profile">Profile</string>
    <string name="university">University</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an Account.?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_valid_name">Enter a valid Name..!</string>
    <string name="enter_valid_username">Enter a valid Username..!</string>
    <string name="your_profile_details">Your Profile Details!</string>
    <string name="old_password">Old Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>
    <string name="close">Close</string>
    <string name="add"><![CDATA[Add >>]]></string>
    <string name="accompanied_by">Accompanied By..!</string>
    <string name="view_details">VIew Details</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="waiting_for_approval">Waiting for Approval..!</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="register_staff">Register Staff</string>
    <string name="registered_staff">Registered Staffs</string>
    <string name="leave_type"> Add/ View Leave Type</string>
    <string name="update_university_detail">Update University Details</string>
    <string name="other_staff_member">Other Staff Member</string>
    <string name="your_leave_history">Your Leave History</string>
    <string name="view_notification">View Notification</string>
    <string name="entitlement">Entitlement</string>
    <string name="application_for_maternity_leave">APPLICATION FOR MATERNITY LEAVE</string>
    <string name="application_for_annual_leave">APPLICATION FOR ANNUAL LEAVE</string>
    <string name="your_notification">Your Notifications</string>
    <string name="pdf_preview">PDF Preview</string>
    <string name="single_staff">Single Staff on leave</string>
    <string name="all_staffs">All Staffs On Leave</string>
    <string name="genrate_by_leave_type">Generate by Leave Type</string>
</resources>
