<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/horizonal_padding"
    android:background="@drawable/bg2"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/horizonal_padding"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"

            android:text="@string/generate_report"/>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginLeft="@dimen/magin_spacing"
            android:layout_marginRight="@dimen/magin_spacing"
            android:text="@string/pdf"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/button"
            android:layout_marginLeft="@dimen/magin_spacing"
            android:layout_marginRight="@dimen/magin_spacing"
            android:text="@string/excel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="@dimen/magin_spacing"
            android:layout_marginRight="@dimen/magin_spacing"
            android:layout_marginLeft="@dimen/magin_spacing"
            android:drawableLeft="@android:drawable/ic_menu_report_image"
            android:text="@string/available_leave"/>

    </LinearLayout>


</LinearLayout>