<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/horizonal_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fill_in_the_details_below"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/leaveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="form type"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/horizonal_padding"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:text="@string/full_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:text="@string/start_date" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:text="@string/end_date" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:text="@string/leave_duration" />

            <MultiAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/textarea_height"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:text="@string/reason" />


            <MultiAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/textarea_height"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:text="@string/leave_address" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>