<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/horizonal_padding"
            android:layout_marginBottom="@dimen/horizonal_padding"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/horizonal_padding"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_fname"
                        android:hint="@string/first_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_lname"
                        android:hint="@string/last_name" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:hint="@string/gender"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="10sp"
                    android:id="@+id/gender_group"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_male"
                        android:text="@string/male"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_female"
                        android:text="@string/female"/>
                </RadioGroup>
                <net.rimoto.intlphoneinput.IntlPhoneInput
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textSize="14sp"
                    app:textColor="#000000"
                    app:flagPaddingBottom="4dp"
                    app:flagPaddingEnd="4dp"
                    app:flagPaddingStart="4dp"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    app:flagPaddingTop="4dp"
                    android:id="@+id/my_phone_input" />

                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/spinner_department"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:id="@+id/spinner_role"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_salary"
                        android:inputType="number"
                        android:hint="@string/present_salary" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_username"
                        android:inputType="text"
                        android:hint="@string/username" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:id="@+id/oldpass_layout"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_oldpassword"
                        android:inputType="textPassword"
                        android:hint="@string/old_password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:id="@+id/pass_layout"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_password"
                        android:inputType="textPassword"
                        android:hint="@string/password" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:layout_marginTop="20sp"
                    android:id="@+id/con_layout"
                    android:gravity="center">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/input_confirm"
                        android:hint="@string/confirm_password" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_spacing"
                    android:layout_marginRight="@dimen/magin_spacing"
                    android:id="@+id/btn_signup"
                    android:text="@string/submit_application"
                    android:background="@drawable/button"
                    android:layout_marginBottom="@dimen/horizonal_padding"
                    android:layout_marginTop="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>