<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/horizonal_padding"
    android:background="@drawable/bg2"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/horizonal_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:drawableTop="@mipmap/ic_action_city"
                    android:background="@null"
                    android:padding="10sp"
                    android:id="@+id/btn_history"
                    android:layout_weight="1"
                    android:text="@string/your_leave_history"/>
                <Button
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:id="@+id/btn_apply"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:drawableTop="@mipmap/ic_atm"
                    android:background="@null"
                    android:text="@string/apply_for_leave"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:id="@+id/btn_profile"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:drawableTop="@mipmap/ic_dashboard"
                    android:background="@null"
                    android:text="@string/your_profile_details"/>

                <Button
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:id="@+id/btn_notification"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:layout_marginLeft="40sp"
                    android:drawableTop="@mipmap/ic_event"
                    android:background="@null"
                    android:text="@string/view_notification"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>