<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/horizonal_padding"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/text1"
        android:layout_alignParentTop="true"
        android:text="@string/university_details"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/horizonal_padding"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:gravity="center">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_university_name" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:drawableLeft="@android:drawable/ic_menu_report_image"
                android:text="@string/logo"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:text="@string/submit_details"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/magin_spacing"
            android:layout_marginRight="@dimen/magin_spacing"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="University Name"/>
    </LinearLayout>
</RelativeLayout>