<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:background="@drawable/square"
                android:gravity="center"
                android:inputType="text"
                android:id="@+id/leave_type"
                android:hint="@string/leave_type" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:layout_marginTop="20sp"
                android:id="@+id/entitlement"
                android:inputType="text"
                android:background="@drawable/square"
                android:gravity="center"
                android:hint="@string/entitlement" />

            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="40sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:id="@+id/submit_btn"
                android:background="@drawable/button"
                android:text="@string/submit_details"/>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="@dimen/magin_spacing"
                android:layout_marginRight="@dimen/magin_spacing"
                android:id="@+id/listView"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>